--- a/Deep_learning/rnn.ipynb
+++ b/Deep_learning/rnn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,103 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# RNN介绍"
+    "# RNN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "h0和x1计算得到h1，h1再和x2做计算得到h2  \n",
+    "x1,x2,x3,x4表示序列特征（不是第几个样本的概念），类似我爱桔梗这四个字就是四个序列特征，表示一个样本数据"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![avatar](image/rnn1.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "inputs of shape(seqSize,batch,input_size)  \n",
+    "hidden of shape(numlayers,batch,hiidden_size)  \n",
+    "output of shape(seqlen,batch,hidden_size)  \n",
+    "hidden of shape(numLayers,batch,hidden_size)  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "batch_size是输入多少条数据  \n",
+    "seq_len是循环的长度，比如根据前n天天气的n，前n天股票信息的n  \n",
+    "input_size是每一天的信息维度  \n",
+    "hidden_size是神经元数量  \n",
+    "out输出的是所有h1到h_N的隐层结果，hidden输出的就是最后一次计算后的结果值,这里N个RNN层其实就是同一个"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![avatar](image/rnn2.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# RNN计算"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([3, 1, 2]),\n",
+       " tensor([[[ 0.3617, -0.1936]],\n",
+       " \n",
+       "         [[-0.5967,  0.5250]],\n",
+       " \n",
+       "         [[-0.4912,  0.7357]]], grad_fn=<StackBackward>),\n",
+       " torch.Size([1, 1, 2]),\n",
+       " tensor([[[-0.4912,  0.7357]]], grad_fn=<StackBackward>))"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "batch_size = 1\n",
+    "seq_len = 3\n",
+    "input_size = 4\n",
+    "hidden_size = 2\n",
+    "num_layers = 1\n",
+    "cell = nn.RNN(input_size = input_size,\n",
+    "                   hidden_size = hidden_size,\n",
+    "                   num_layers = num_layers)\n",
+    "inputs = torch.randn(seq_len,batch_size,input_size)\n",
+    "hidden = torch.zeros(num_layers,batch_size,hidden_size)\n",
+    "\n",
+    "out,hidden = cell(inputs,hidden)\n",
+    "out.shape,out,hidden.shape,hidden"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 一个例子"
    ]
   },
   {
@@ -37,90 +133,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "x1,x2,x3就是$\\color{#FF0000}{seq len}$序列的长度，每个下面由一个长度为3的向量组成，这个向量就是$\\color{#FF0000}{input size}$。  \n",
-    "对于语句一行数据就是一句话，每句话有三个单词组成，每个单词用001这样的one-hot编码。  "
+    "x1,x2,x3就是序列的长度$\\color{#FF0000}{seq len}$  \n",
+    "每个序列是由长度为3的向量组成，这个向量就是$\\color{#FF0000}{input size}$  \n",
+    "一共6行表示6个样本对应就是$\\color{#FF0000}{batch_size}$  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![avatar](image/rnn.jpg)"
+    "![avatar](image/rnn3.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![avatar](image/rnn_nlp.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![avatar](image/rnn2.jpg)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "从上面图可以看出torch.ones(seq_len,batch_size,input_size)，这样一个输入数据第一个维度是序列 也就是I,hate,this这三  \n",
-    "batch_size相当于该序列位置上所有批次数据，input_size是该序列特征维度。  \n",
-    "[batch_size,input_size] * [input_size,out_size] 就是X*W的"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 建立输入到输出"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "out输出的是所有h1到h_N的隐层结果，hidden输出的就是最后一次计算后的结果值。这里N个RNN层其实就是同一个"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "batch_size是输入多少条数据  \n",
-    "seq_len是循环的长度，比如根据前n天天气的n，前n天股票信息的n  \n",
-    "input_size是每一天的信息维度  \n",
-    "hidden_size是神经元数量"
+    "解释下上面的图  \n",
+    "输入hello这个单词，然后对每个字母做数字映射，再把映射后的数字转换成one-hot编码  \n",
+    "这里seqlen序列长就是5，5个单词序列组成一个数据，每个单词的维度则是4"
    ]
   },
   {
